# satysfi-code-printer

./: .gitignore  README.md  Satyristes  satysfi-code-printer-doc.opam  satysfi-code-printer.opam  satysfi-code-printing-doc.opam  satysfi-code-printing.opam
.github/workflows/: gh-pages.yml
doc/: code-printer-ja.saty  demo.R  demo.c  demo.f90  demo.fs  demo.hs  demo.kt  demo.lua  demo.nim  demo.py  demo.rb  demo.rs  demo.satyh  demo.ts  local.satyh  manual-ja.saty
doc/demo/: demo.cbl  demo.cpp  demo.cs  demo.d  demo.erl  demo.go  demo.html  demo.java  demo.jl  demo.js  demo.json  demo.json5  demo.lisp  demo.make  demo.ml  demo.php  demo.pl  demo.rs  demo.scala  demo.swift  demo.tex  demo.toml  demo.vb  demo.xml
src/: code-design.satyh  code-printer.satyh  code-syntax.satyg  code-theme.satyh
