opam-version: "2.0"
name: "satysfi-code-printer-doc"
version: "1.0.0"
synopsis: "Document of satysfi-code-printer"
description: """
Document of satysfi-code-printer.
satysfi-code-printer: https://github.com/puripuri2100/satysfi-code-printer
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/satysfi-code-printer"
dev-repo: "git+https://github.com/puripuri2100/satysfi-code-printer.git"
bug-reports: "https://github.com/puripuri2100/satysfi-code-printer/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-code-printer" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base" { >= "1.4.0" }
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "code-printer-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "code-printer-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
