opam-version: "2.0"
name: "satysfi-code-printer"
version: "1.0.0"
synopsis: "Typeset source code with SATySFi"
description: """
Typeset source code with SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-code-printer"
dev-repo: "git+https://github.com/puripuri2100/satysfi-code-printer.git"
bug-reports: "https://github.com/puripuri2100/satysfi-code-printer/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
  "satysfi-fonts-dejavu" {>= "2.37"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "code-printer"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "code-printer"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
