opam-version: "2.0"
name: "satysfi-code-printer-doc"
version: "0.1.0"
synopsis: ""
description: """
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/satysfi-code-printer"
dev-repo: "git+https://github.com/puripuri2100/satysfi-code-printer.git"
bug-reports: "https://github.com/puripuri2100/satysfi-code-printer/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-code-printer" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "code-printer-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "code-printer-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
